test/expressions/bitshift/checks/bitshiftByNegative.3.good
bitshiftByNegative.chpl:11: error: halt reached - Cannot bitshift 128 by -8 because -8 is less than 0
